--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
 
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap"
